; ModuleID = '/home/carl/AnghaBench/mruby/mrbgems/mruby-complex/src/extr_complex.c_mul_pair.c'
source_filename = "/home/carl/AnghaBench/mruby/mrbgems/mruby-complex/src/extr_complex.c_mul_pair.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.float_pair = type { i32, i64 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.float_pair*, %struct.float_pair*, %struct.float_pair*)* @mul_pair to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @mul_pair(%struct.float_pair* %0, %struct.float_pair* %1, %struct.float_pair* %2) #0 {
  %4 = alloca %struct.float_pair*, align 8
  %5 = alloca %struct.float_pair*, align 8
  %6 = alloca %struct.float_pair*, align 8
  store %struct.float_pair* %0, %struct.float_pair** %4, align 8
  store %struct.float_pair* %1, %struct.float_pair** %5, align 8
  store %struct.float_pair* %2, %struct.float_pair** %6, align 8
  %7 = load %struct.float_pair*, %struct.float_pair** %5, align 8
  %8 = getelementptr inbounds %struct.float_pair, %struct.float_pair* %7, i32 0, i32 0
  %9 = load i32, i32* %8, align 8
  %10 = load %struct.float_pair*, %struct.float_pair** %6, align 8
  %11 = getelementptr inbounds %struct.float_pair, %struct.float_pair* %10, i32 0, i32 0
  %12 = load i32, i32* %11, align 8
  %13 = mul nsw i32 %9, %12
  %14 = load %struct.float_pair*, %struct.float_pair** %4, align 8
  %15 = getelementptr inbounds %struct.float_pair, %struct.float_pair* %14, i32 0, i32 0
  store i32 %13, i32* %15, align 8
  %16 = load %struct.float_pair*, %struct.float_pair** %5, align 8
  %17 = getelementptr inbounds %struct.float_pair, %struct.float_pair* %16, i32 0, i32 1
  %18 = load i64, i64* %17, align 8
  %19 = load %struct.float_pair*, %struct.float_pair** %6, align 8
  %20 = getelementptr inbounds %struct.float_pair, %struct.float_pair* %19, i32 0, i32 1
  %21 = load i64, i64* %20, align 8
  %22 = add nsw i64 %18, %21
  %23 = load %struct.float_pair*, %struct.float_pair** %4, align 8
  %24 = getelementptr inbounds %struct.float_pair, %struct.float_pair* %23, i32 0, i32 1
  store i64 %22, i64* %24, align 8
  ret void
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
